main.css
html,body{
    width: auto;
    height: 99%;
    background: rgb(10, 10, 10);
    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#000000",endColorstr="#9f0000",GradientType=1);
    text-align: center;
}

body{
    padding-left: 10px;
    padding-right: 10px;
}

*{
    font-family: Arial, Helvetica, sans-serif;
    margin: 0px;
}

.container{    
z-index: 10;
background: rgba(250, 250, 250, 1);
box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
border-radius: 30px;
width: auto;
max-width: 1000px;
min-width: 100px;
height: 84%;
margin: auto;
margin-top: 20px;
margin-bottom: 0px;
padding-bottom: 0px;
overflow: hidden;
}

#itemList{
    list-style: none;
    margin: 0px;
    padding: 10px;
    overflow: scroll;
}

li{
    margin: 10px;
    margin-bottom: 20px;
    width: auto;
    height: 50px;
}

.list-item{
    font-size: 18px;
    align-items: center;
    height: 40px;
    border-radius: 20px;
    margin: 0px;
    padding: 10px;
    background-color: rgb(243, 243, 243);
    transition: 0.2s;
}
.list-item:hover{
    box-shadow: 2px 2px 10px 0px rgba(0, 0, 0, 0.25);
    border: 2px solid rgb(200, 59, 59);
}

.urgente-null{
    color: rgb(176, 176, 176);
    border-radius: 15px;
    width: 35px;
    height: 35px;
    background-color: rgb(176, 176, 176);
    border: 0;

    box-shadow: 2px 1px 1px 0px rgba(0, 0, 0, 0.2);
}
.urgente-true{
    padding: 0px;
    text-align: center;
    justify-content: center;
    align-items: center;
    font-size: 20px;
    font-weight: bold;
    color: white;
    border: 0;
    border-radius: 15px;
    width: 35px;
    height: 35px;
    background-color: rgb(222, 45, 45);

    box-shadow: 2px 1px 1px 0px rgba(0, 0, 0, 0.2);
}
.urgente-false{
    padding: 0px;
    text-align: center;
    justify-content: center;
    align-items: center;
    font-size: 20px;
    font-weight: bold;
    color: black;
    border-radius: 15px;
    border: 0;
    width: 35px;
    height: 35px;
    background-color: rgb(255, 204, 0);

    box-shadow: 2px 1px 1px 0px rgba(0, 0, 0, 0.2);
}

.date-container{
    margin-top: 0px;
}

.quant-button{
    padding: 0;
    margin-left: 10px;
    margin-right: 10px;
    width: 40px;
    height: 35px;
    border-radius: 15px;
    font-size: 20px;
    font-weight: bold;
    color: black;
    background-color: rgb(255, 255, 255);
    border: 0px;
    box-shadow: 1px 2px 3px 0px rgba(0, 0, 0, 0.2) inset;

}

.quant-control{
    margin: 2px;
    width: 30px;
    height: 30px;
    border-radius: 15px;
    font-size: 20px;
    font-weight: bold;
    color: black;
    background-color: rgb(245, 245, 245);
    border: 0px;
    padding: 0px;
    box-shadow: 1px 1px 3px 1px rgba(0, 0, 0, 0.2);
}

.quant-control:hover{
    transform: scale(1);
}

input{
    margin: 10px;
    padding: 0px;
    padding-left: 10px;
    width: 200px;
    height: 60px;
    border: 1px solid gray;
    border-radius: 15px;
    background-color: white;
    color: black;
    font-size: 14px;
}
select{
    font-size: 14px;
    margin: 10px;
    padding: 10px;
    width: 215px;
    height: 60px;
    border: 1px solid gray;
    border-radius: 15px;
    background-color: white;
    color: black;
}

.filter-button{
    margin: 5px;
    width: 120px;
    height: 35px;
    border-radius: 10px;
    border: 0px solid rgb(255, 255, 255);
    background-color: rgb(35, 138, 228);
    color: rgb(255, 255, 255);
    font-size: 16px;
    transition: 0.2s;
}
.filter-button:hover{
    background-color: rgb(35, 138, 228);
    transform: scale(1.1);
    font-weight: bold;
    color: white;
    border: 0;
}

#add-submit-button,#login-submit-button,#change-pass-button{
    margin: 10px;
    background-image: linear-gradient(120deg, rgb(165, 0, 0) 0%, rgb(221, 0, 0)60%);
    color: white;
    border: 0px solid black;
    width: 210px;
    height: 50px;
    border-radius: 20px;
    font-size: 18px;
    font-weight: bold;
    box-shadow: 0px 5px 10px 0px rgba(0, 0, 0, 0.45);
    transition: 0.5s;
}

#add-submit-button:hover,#login-submit-button:hover,#change-pass-button:hover{
    box-shadow: 0px 2px 5px 0px rgba(0, 0, 0, 0.55);
}

.inputfield{
    margin: 10px;
    padding: 0px;
    padding-left: 10px;
    width: 200px;
    height: 40px;
    border: 1px solid gray;
    border-radius: 15px;
    background-color: white;
    color: black;
    font-size: 14px;
}

#sign-off:hover,#usermenu-button:hover{
    transform: scale(1.1);
}

#sign-off{
    font-weight: bold;
    border: 1px solid rgb(255, 255, 255);
    border-radius: 10px;
    background-color: rgba(255, 255, 255, 0);
    color: rgb(255, 255, 255);
    height: 40px;
    width: 100px;
    margin: 8px;
    transition: 0.2s;
    border: 0;
    background-color: rgb(219, 63, 63);
    box-shadow: 0px 0px 10px 5px rgba(0, 0, 0, 0.2);
    color: rgb(255, 255, 255);
}

#usermenu-button{
    font-weight: bold;
    border: 1px solid rgb(255, 255, 255);
    border-radius: 10px;
    background-color: rgba(255, 255, 255, 0);
    color: rgb(255, 255, 255);
    height: 40px;
    width: 100px;
    margin: 8px;
    transition: 0.2s;
    border: 0;
    background-color: rgb(255, 255, 255);
    box-shadow: 0px 0px 10px 5px rgba(0, 0, 0, 0.2);
    color: rgb(0, 0, 0);
}

.toggle{
    border: 0;
    display: flex;
    width: 60px;
    height: 30px;
    border-radius: 20px;
    margin-left: 10px;
    align-items: center;
    padding: 1px;
    transition: 0.2s;
    box-shadow: 1px 1px 2px 0px rgba(0, 0, 0, 0.2) inset;
}

.circle{
    background-color: rgb(255, 255, 255);
    width: 25px;
    height: 25px;
    border: 0px solid rgb(59, 172, 54);
    border-radius: 20px;
    margin-left: 0px;
    transition: 0.2s;
    box-shadow: 2px 0px 2px 0px rgba(0, 0, 0, 0.2);
}

.close-button{
    margin: 5px;
    margin-bottom: 0px;
    width: 30px;
    height: 30px;
    padding: 0px;
    font-size: 25px;
    color: white;
    border: 2px solid white;
    background: rgba(147, 40, 40, 0.0);
    border-radius: 5px;
    justify-content: center;
    align-items: center;
}

.close-tab{
    display: flex;
    height: 15px;
    justify-content: right;
    align-items: right;
}

h3{
    font-size: 20px;
}

.item-button{
    background-color: transparent;
    border: 0;
    padding: 0;
    margin: 0;
    color: black;
    font-size: 18px;
    text-align: left;
}

.table-row{
    text-align: center;
}

.orange-background {
   background-color: orange;
  }
  .red-background {
    background-color: #CC0000;
    color: white;
   }

 .orchid-background {
  background-color: orchid;
 }

.beige-background {
 background-color: rgb(245, 221, 220);
}

.menu-page-button{
    width: 300px;
    height: 190px;
    border: 0px rgb(0, 0, 0) solid;
    border-radius: 20px;
    background-color: rgb(243, 243, 243);
    box-shadow: 0px 5px 7px 5px rgba(0, 0, 0, 0.12);
    transition: 0.2s;
    text-align: center;
    align-items: center;
    justify-content: center;
    padding: 20px;
}
.menu-page-button:hover{
    z-index: 10;
    background-color: white;
    box-shadow: 0px 0px 5px 5px rgba(0, 0, 0, 0.15);
}

.product-item{
    width: 100%;
    height: 100%;
    border-radius: 10px;
    background-color:rgb(222, 222, 222);
    justify-content: center;
    align-items: center;
    text-align: center;
    box-shadow: 0px 2px 3px 2px rgba(0, 0, 0, 0.20);
    transition: 0.1s ease-out;
}

.product-item:hover{
    background-color:rgb(250, 250, 250);
    box-shadow: 0px 0px 3px 2px rgba(0, 0, 0, 0.15);
    transform: scale(1.05);
}

.selected-product{
    margin: 0px;
    padding: 0px;
    height: 18px;
    width: 200px;
}

#order-total{
    font-size: 28px;
}

.product-list-item{
    margin: 5px;
    height: 110px;
    width: 20%;
    min-width: 100px;
    max-width: 200px;
    display: inline-block;
}

#product-order{
    padding: 10px;
    padding-left: 10px;
}

.cash-button,.card-button{
    background-color: rgb(240, 240, 240);
    color: rgb(42, 42, 42);
    border: 0px solid black;
    border-radius: 20px;
    font-size: 20px;
    font-weight: bolder;
    padding: 10px;
    margin: 5px;
    margin-top: 20px;
    width: 100px;
    height: 50px;
    box-shadow: 0px 5px 5px 0px rgba(0, 0, 0, 0.15);
}

